TestSuite/errors/err0173.pas
begin
var a : array of integer := new integer[2,2]((1,2),(1,2));  
end.